@@ -4,11 +4,16 @@
 \title{Rmpfr News}
 \encoding{UTF-8}
 
-\section{Changes in version 0.7-1 [2018-06-08]}{
+\section{Changes in version 0.7-1 [2018-07-..]}{
   \subsection{BUG FIXES}{
     \itemize{
       \item \code{formatMpfr()} for large low-precision numbers now uses
-      scientific representation, fixing the bug RMH was reporting March 17 already.
+      scientific representation, fixing the bug RMH was reporting March
+      17 already.
+
+      \item \code{outer()} is \dQuote{imported} from base, so it
+      behaves as an \pkg{Rmpfr} function which dispatches e.g., when
+      calling \code{\link{tcrossprod}()}.
     }
   }
 }
